# ProgettoAlgoritmi

./: AVL.c  AVL.h  CMakeLists.txt  IOFile.c  IOFile.h  aheadbuffer.c  aheadbuffer.h  datadecoder.c  datadecoder.h  datawriter.c  datawriter.h  dictionary.c  dictionary.h  huffman.c  huffman.h  huffman_table.c  huffman_table.h  lzss.c  lzss.h  main.c  stringtree.c  stringtree.h  tree.c  tree.h  utils.c  utils.h  windowbuffer.c  windowbuffer.h
